[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Philip Craig <philipjcraig@gmail.com>", "Jon Gjengset <jon@thesquareplanet.com>", "Noah Bergbauer <noah.bergbauer@tum.de>"]
description = "A cross-platform symbolication library written in Rust, using `gimli`"
documentation = "https://docs.rs/addr2line"
keywords = ["DWARF", "debug", "elf", "symbolicate", "atos"]
categories = ["development-tools::debugging", "command-line-utilities"]
license = "Apache-2.0/MIT"
name = "addr2line"
readme = "./README.md"
repository = "https://github.com/gimli-rs/addr2line"
version = "0.6.0"
exclude = ["/benches/*", "/fixtures/*"]

[badges]
travis-ci = { repository = "gimli-rs/addr2line" }

[dependencies]
gimli = { version = "0.16", default-features = false, features = ["alloc"], git = "https://github.com/est31/gimli", rev = "304caacf8b73f117813b1a0d436ce24403459bf2" }
fallible-iterator = { version = "0.1", default-features = false }
object = { version = "0.9", default-features = false }
intervaltree = { version = "0.2", default-features = false }
smallvec = { version = "0.6", default-features = false }
lazycell = "1.0"
rustc-demangle = { version = "0.1", optional = true }
cpp_demangle = { git = "https://github.com/gimli-rs/cpp_demangle", rev = "6d5320d2f5c119923647b6d7d2a7d563717a4ddf", version = "0.2", default-features = false, optional = true }

[dev-dependencies]
memmap = "0.6"
clap = "2"
backtrace = "0.3"
findshlibs = "0.3"
rustc-test = "0.3"

[profile.release]
debug = true
[profile.bench]
debug = true

[features]
default = ["rustc-demangle", "cpp_demangle"]

[[test]]
name = "output_equivalence"
harness = false

[[test]]
name = "correctness"
